--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .title-select-group{position:relative;display:inline-flex;flex-direction:column;align-items:flex-start;gap:6px;max-width:100%;min-width:0}
 .title-select-wrap{display:flex;align-items:center;gap:6px;position:relative;margin:0;width:100%;max-width:100%;min-width:0}
 .title-select{display:none}
-.title-select-trigger{appearance:none;border:1px solid transparent;background:#fff;border-radius:14px;padding:14px 18px;font:inherit;font-size:clamp(20px,3vw,28px);line-height:1.3;font-weight:800;letter-spacing:-0.01em;color:var(--ink);display:inline-flex;align-items:center;gap:12px;cursor:pointer;transition:background var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease);min-width:0;width:auto;max-width:100%;text-align:left;box-shadow:none;align-self:flex-start}
+.title-select-trigger{appearance:none;border:1px solid transparent;background:#fff;border-radius:14px;padding:16px 18px;font:inherit;font-size:clamp(20px,3vw,28px);line-height:1.3;font-weight:800;letter-spacing:-0.01em;color:var(--ink);display:inline-flex;align-items:center;gap:12px;cursor:pointer;transition:background var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease);min-width:0;width:auto;max-width:100%;text-align:left;box-shadow:none;align-self:flex-start}
 .title-select-trigger:hover{background:#eef4ff;border-color:rgba(26,115,232,.35)}
 .title-select-trigger:focus-visible{outline:3px solid rgba(26,115,232,.35);outline-offset:4px}
 .title-select-trigger[aria-expanded="true"]{background:#eef4ff;border-color:rgba(26,115,232,.35)}
@@ -80,7 +80,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .sheet-card-header.multi-search-active .title-select-trigger .char-toggle-icon{background:#e2e8f0;color:var(--muted)}
 .sheet-card-header.multi-search-active .char-meta{opacity:.75}
 .title-select-trigger:disabled .char-toggle-icon{background:#cbd5f5;color:#475569}
-.char-toggle-text{display:block;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;line-height:1.2;flex:1 1 auto;min-width:0}
+.char-toggle-text{display:block;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;line-height:1.3;padding-block:2px;flex:1 1 auto;min-width:0}
 .char-toggle-icon{display:inline-flex;align-items:center;justify-content:center;width:26px;height:26px;border-radius:50%;background:#eef4ff;color:var(--primary);flex:0 0 auto;transition:transform var(--dur) var(--ease),background var(--dur) var(--ease)}
 .title-select-trigger:hover .char-toggle-icon{background:#dbeafe}
 .title-select-trigger[aria-expanded="true"] .char-toggle-icon{transform:rotate(180deg)}
