--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .char-menu[data-menu-state='open']{opacity:1;transform:translateY(0) scale(1);pointer-events:auto}
 .char-menu[data-menu-state='closing']{opacity:0;transform:translateY(-4px) scale(.98);pointer-events:none}
 .char-menu[hidden]{display:none}
-.char-menu-item{width:100%;display:flex;align-items:center;justify-content:space-between;gap:12px;padding:10px 18px;font:inherit;font-size:16px;color:var(--ink);background:none;border:none;cursor:pointer;transition:background-color var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease)}
+.char-menu-item{width:100%;display:flex;align-items:center;justify-content:flex-start;gap:12px;padding:10px 18px;font:inherit;font-size:16px;color:var(--ink);background:none;border:none;cursor:pointer;transition:background-color var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease);text-align:left}
 .char-menu-group{padding:12px 18px 4px;font-size:11px;font-weight:700;letter-spacing:.08em;text-transform:uppercase;color:var(--muted)}
 .char-menu-group--tier1{color:#16a34a}
 .char-menu-group--tier2{color:#2563eb}
@@ -100,7 +100,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .char-menu-item:hover,.char-menu-item:focus-visible{background:#eef4ff;color:var(--primary);outline:none}
 .char-menu-item.active{color:var(--primary);font-weight:600}
 .char-menu-text{flex:1 1 auto;min-width:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
-.char-menu-check{flex:0 0 auto;display:inline-flex;align-items:center;justify-content:center;width:20px;height:20px;color:var(--primary);opacity:0;transform:scale(.7);transition:transform var(--dur) var(--ease),opacity var(--dur) var(--ease)}
+.char-menu-check{flex:0 0 auto;display:inline-flex;align-items:center;justify-content:center;width:20px;height:20px;color:var(--primary);opacity:0;transform:scale(.7);transition:transform var(--dur) var(--ease),opacity var(--dur) var(--ease);margin-left:auto}
 .char-menu-item.active .char-menu-check{opacity:1;transform:scale(1)}
 .char-menu-check svg{width:18px;height:18px}
 .char-badges{margin-top:4px;display:none;gap:8px;flex-wrap:wrap;align-items:center}
@@ -4597,6 +4597,12 @@ function rebuildCharacterOptions({preserveSelection=true, preferredKey=null}={})
     if(cmp!==0) return cmp;
     return a.key.localeCompare(b.key,undefined,{sensitivity:'base',numeric:true});
   });
+  if(hasDmLogData()){
+    const dmOpt=document.createElement('option');
+    dmOpt.value=DM_LOG_KEY;
+    dmOpt.textContent='Dungeon Master Log';
+    charSel.appendChild(dmOpt);
+  }
   entries.forEach(({key,label,tierId,tierLabel,tierOrder})=>{
     const opt=document.createElement('option');
     opt.value=key;
@@ -4608,12 +4614,6 @@ function rebuildCharacterOptions({preserveSelection=true, preferredKey=null}={})
     }
     charSel.appendChild(opt);
   });
-  if(hasDmLogData()){
-    const dmOpt=document.createElement('option');
-    dmOpt.value=DM_LOG_KEY;
-    dmOpt.textContent='Dungeon Master Log';
-    charSel.appendChild(dmOpt);
-  }
   const candidateKeys=[preferredKey, previousSelection, storedKey];
   let nextKey=null;
   for(const candidate of candidateKeys){
