Remove redundant Season label from DM log entries

--- a/index.html
+++ b/index.html
@@ -6723,7 +6723,7 @@ function makeDmCard(entry,idx){
   if(!isAllocation){
     addMetaPart('code',null,entry.code);
   }
-  addMetaPart('season','Season',entry.season);
+  addMetaPart('season',null,entry.season);
   addMetaPart('location','Location',entry.location);
   if(!isAllocation){
     addMetaPart('item','Reward',entry.item);
