--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-row-title{flex:1 1 auto;min-width:0;position:relative;overflow:hidden;display:flex;align-items:center}
 .log-row-title .display{display:block;width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;line-height:1.35;font-size:14px;transition:color var(--dur) var(--ease)}
 .log-row-title.is-adventure .display{font-weight:700}
+.dm-card--session .log-row-title .display{font-weight:700}
 .log-row-title.is-activity .display{font-weight:400;color:var(--muted)}
 @media (prefers-reduced-motion:reduce){
   .log-row-title.scrollable .display{animation:none}
