--- a/index.html
+++ b/index.html
@@ -228,13 +228,13 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-list .card.editing::after{border-radius:var(--log-card-radius)}
 .log-list .card:first-child{border-top:1px solid var(--border)}
 .log-list .card::before{content:"";position:absolute;top:-1px;right:-1px;bottom:-1px;left:-1px;pointer-events:none;border-radius:inherit;background:transparent;box-shadow:inset 0 0 0 0 rgba(238,241,247,0);opacity:0;transition:box-shadow var(--dur) var(--ease),opacity var(--dur) var(--ease);z-index:1;will-change:box-shadow,opacity}
-.log-list .card::after{content:"";position:absolute;top:-1px;right:-1px;bottom:-1px;left:-1px;background:var(--row-bg);pointer-events:none;transition:background var(--dur) var(--ease),border-color var(--dur) var(--ease);z-index:0;border-radius:inherit;border:3px solid transparent;border-left:0}
+.log-list .card::after{content:"";position:absolute;top:-1px;right:-1px;bottom:-1px;left:-1px;background:var(--row-bg);pointer-events:none;transition:background var(--dur) var(--ease),border-color var(--dur) var(--ease);z-index:0;border-radius:inherit;border:var(--card-border-width,3px) solid transparent;border-left:0}
 .log-list .card>*{position:relative;z-index:1}
 .log-list .card:hover{--row-bg:rgba(15,23,42,.03)}
 .log-list .card:hover,.log-list .card.open{z-index:1}
 .log-list .card.open{--row-bg:rgba(148,163,184,.08);--card-highlight-opacity:1;background:var(--open-card-body);border:1px solid var(--open-card-border);box-shadow:var(--open-card-shadow);transform:none;border-radius:0}
 .log-list .card.open .card-hd{background:var(--open-card-header);border-radius:0;border-bottom:1px solid rgba(148,163,184,.18);box-shadow:none}
-.log-list .card.open::after{border-color:var(--open-card-border);background:var(--open-card-body);border-radius:0}
+.log-list .card.open::after{--card-border-width:1px;border-color:var(--open-card-border);background:var(--open-card-body);border-radius:0}
 .log-list .card.editing::after{border-color:#eef1f7}
 .log-list .card.editing .card-hd{background:var(--row-bg,#f1f5f9)}
 .log-list .card.editing{--row-bg:rgba(241,245,249,.9)}
