Rename trade partners to counterparties

--- a/concept-mockup.html
+++ b/concept-mockup.html
@@ -640,7 +640,7 @@ header{
             <div>
               <div class="timeline-title">Trade — Wand of Magic Missiles</div>
               <div class="timeline-meta">
-                <span><strong>Partner:</strong> Squelch</span>
+                <span><strong>Counterparty:</strong> Squelch</span>
                 <span><strong>Code:</strong> DT-TRADE</span>
               </div>
             </div>
