--- a/index.html
+++ b/index.html
@@ -604,7 +604,11 @@ body.card-editor-active #addCard{
 .modal-add button:hover{background:rgba(26,115,232,.2)}
 
 /* Inventory row styles */
-.inv-row{display:grid;grid-template-columns:1fr auto;align-items:center;padding:6px 10px;border-radius:8px;cursor:pointer;transition:background .2s;column-gap:18px}
+.inv-row{display:grid;grid-template-columns:1fr auto;align-items:center;padding:6px 10px;border-radius:8px;cursor:pointer;transition:background-color var(--dur) var(--ease),box-shadow var(--dur) var(--ease);column-gap:18px;position:relative;overflow:hidden}
+.inv-row::after{content:"";position:absolute;inset:0;background:rgba(37,99,235,.12);opacity:0;pointer-events:none;transition:opacity var(--dur) var(--ease)}
+.inv-row>*{position:relative;z-index:1}
+.modal:not(.editing) .inv-row:not(.static):hover::after{opacity:1}
+.modal:not(.editing) .inv-row:not(.static):hover{box-shadow:0 6px 16px rgba(15,23,42,.12)}
 .inv-row:nth-child(odd){background:#fafbfc}
 .inv-row:nth-child(even){background:#f2f5f8}
 .inv-row.active{font-weight:600;background:var(--gift-active-bg,#e8f0ff);color:var(--gift-active-fg,inherit)}
